unpackaged/main/default/objects/litify_time__lit_Bill__c/litify_time__lit_Bill__c.object-meta.xml
<CustomObject>
    <label>Bill</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>