unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Amount_Due_Sum__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Amount_Due_Sum__c</fullName>
    <label>Amount Due Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>