unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Bill_Total__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Bill_Total__c</fullName>
    <formula>MAX(0,litify_time__lit_Billed_Amount_Sum__c - ( litify_time__lit_Billed_Amount_Sum__c *  litify_time__lit_Discount_Percent__c) -  litify_time__lit_Discount_Amount__c +  litify_time__lit_Tax_Amount_Sum__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>