unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Billing_Period_End__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Period_End__c</fullName>
    <label>Billing Period End Date</label>
    <type>Date</type>
</CustomField>