unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>