unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>