unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>