unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Balance</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>