unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>