unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Total_Duration__c</fullName>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>