unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Total_Hard_Costs__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Total_Hard_Costs__c</fullName>
    <label>Total Hard Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>