unpackaged/main/default/objects/litify_time__lit_Bill__c/fields/litify_time__lit_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Write_Off__c</fullName>
    <label>Write Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>