unpackaged/main/default/objects/litify_time__lit_Bill__c/validationRules/litify_time__Prevent_Negative_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Prevent_Negative_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   litify_time__lit_Amount_Due_Sum__c &lt;0,
   litify_time__lit_Amount_Paid_Sum__c &lt;0,
   litify_time__lit_Discount_Amount__c &lt;0,
   litify_time__lit_Discount_Sum__c &lt;0,
   litify_time__lit_Markdown_Amount_Sum__c &lt;0,
   litify_time__lit_Non_billable_Amount_Sum__c &lt;0,
   litify_time__lit_Write_Off__c &lt;0,
   litify_time__lit_Writedown_Sum__c &lt;0,
   litify_time__lit_Billed_Amount_Sum__c &lt;0,
    litify_time__lit_Tax_Amount_Sum__c &lt;0)</errorConditionFormula>
    <errorMessage>Currency value cannot be negative</errorMessage>
</ValidationRule>